text include finished, working link include

--- a/spiderweb/app/views/splashdown.html
+++ b/spiderweb/app/views/splashdown.html
@@ -14,186 +14,11 @@
       </div>
       <tabs>
         <pane heading="Text">
-          <div ng-repeat="site in analysis.sites" class="analysis">
-            <h4 class="inline">Site {{$index + 1}}:</h4><h4 class="inline url"> {{site.url}}</h4>
-            <h5 class="inline search-filter">Search: </h5><input ng-model="searchText">
-            <div class="analysis-content">
-
-              <div class="analysis-box" ng-show="site[results].visibleText.words">
-                <h4>Visible Text</h4>
-                <div class="word-pane">
-                  <div class="word-box title">
-                    <div class="rank">Rank</div>
-                    <div class="count">Count</div>
-                    <div class="word">Word</div>
-                  </div>
-                  <div ng-repeat="word in site[results].visibleText.words | limitTo:100 | filter:searchText" class="word-box">
-                    <div class="rank">{{word.rank}}</div>
-                    <div class="count">{{word.count}}</div>
-                    <div class="word" ng-click="addInfo(word, site, '- (visible text)')">{{word.word}}</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="analysis-box" ng-show="site[results].headlineText.words">
-                <h4>Headline Text</h4>
-                <div class="word-pane">
-                  <div class="word-box title">
-                    <div class="rank">Rank</div>
-                    <div class="count">Count</div>
-                    <div class="word">Word</div>
-                  </div>
-                  <div ng-repeat="word in site[results].headlineText.words | limitTo:100 | filter:searchText" class="word-box">
-                    <div class="rank">{{word.rank}}</div>
-                    <div class="count">{{word.count}}</div>
-                    <div class="word" ng-click="addInfo(word, site, '- (headline text)')">{{word.word}}</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="analysis-box" ng-show="site[results].hiddenText.words">
-                <h4>Hidden Text</h4>
-                <div class="word-pane">
-                  <div class="word-box title">
-                    <div class="rank">Rank</div>
-                    <div class="count">Count</div>
-                    <div class="word">Word</div>
-                  </div>
-                  <div ng-repeat="word in site[results].hiddenText.words | limitTo:100 | filter:searchText" class="word-box">
-                    <div class="rank">{{word.rank}}</div>
-                    <div class="count">{{word.count}}</div>
-                    <div class="word" ng-click="addInfo(word, site, '- (hidden text)')">{{word.word}}</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="analysis-box" ng-show="site[results].searchWords.words">
-                <h4>Search Words</h4>
-                <div class="word-pane">
-                  <div class="word-box title">
-                    <div class="rank">Rank</div>
-                    <div class="count">Count</div>
-                    <div class="word">Word</div>
-                  </div>
-                  <div ng-repeat="word in site[results].searchWords.words | limitTo:100 | filter:searchText" class="word-box">
-                    <div class="rank">{{$index}}</div>
-                    <div class="count">{{word.count}}</div>
-                    <div class="word" ng-click="addInfo(word, site, '- (search words)')">{{word.word}}</div>
-                  </div>
-                </div>
-              </div>
-
-              
-              <div class="info-box">
-                <h4>Additional Info</h4>
-                <div class="btn-group add-info-btns">
-                  <button class="btn active-{{site.additionalInfo.pagesSel}}" ng-click="addInfoChoice(site, 'pages')">Pages</button>
-                  <button class="btn active-{{site.additionalInfo.tagsSel}}" ng-click="addInfoChoice(site, 'tags')">Tags</button>
-                </div>
-                <div class="info-pane">
-                  <h4>Word: <span class="url">{{site.additionalInfo.word}} {{site.additionalInfo.type}}</span></h4>
-                  <div class="page-pane" ng-show="site.additionalInfo.selected && site.additionalInfo.pagesSel">
-                    <div class="word-box title">
-                      <div class="rank">Rank</div>
-                      <div class="count">Count</div>
-                      <div class="word">Page</div>
-                    </div>
-                    <div ng-repeat="page in site.additionalInfo.pages | limitTo:9" class="word-box">
-                      <div class="rank">{{$index + 1}}</div>
-                      <div class="count">{{page.count}}</div>
-                      <div class="page-box">{{page.page}}</div>
-                    </div>
-                  </div>
-                  <div class="page-pane" ng-show="site.additionalInfo.selected && site.additionalInfo.tagsSel">
-                    <div class="word-box title">
-                      <div class="rank">Rank</div>
-                      <div class="count">Count</div>
-                      <div class="word">Tag</div>
-                    </div>
-                    <div ng-repeat="tag in site.additionalInfo.tags | limitTo:9" class="word-box">
-                      <div class="rank">{{$index + 1}}</div>
-                      <div class="count">{{tag.count}}</div>
-                      <div class="page-box">{{tag.tag}}</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-            <hr />
-          </div>
-
-<!-- COMMON GROUND
-================================================== -->
-          <div ng-show="commonGround" class="analysis">
-            <h4 class="">Common Ground</h4>
-            <button ng-click="compareSites()" class="compare-sites">
-              Compare
-            </button>
-            <div class="sites">
-              <div ng-repeat="site in analysis.sites">
-                <label class="checkbox inline">
-                  <input type="checkbox" ng-model="site.include">
-                  <h5 class="inline color-{{($index + 1) % 5}} include-{{site.include}}">Site {{$index + 1}}:</h5>
-                  <h5 class="inline url color-{{($index + 1) % 5}} include-{{site.include}}"> {{site.url}}</h5>
-              </label>
-              </div>
-            </div>
-
-            <div class="analysis-content">
-              <!-- only show comparison if results exists and more than 1 site -->
-              <div class="analysis-box" ng-show="analysis.sites[1][results].visibleText.words">
-                <h4>Visible Text</h4>
-                <div class="word-pane  common">
-                  <div class="word-box title">
-                    <div class="rank">Rank</div>
-                    <div class="word">Word</div>
-                  </div>
-                  <div ng-repeat="word in commonWords['visibleText'] | limitTo:100" class="word-box">
-                    <div ng-repeat="rank in word.rank" class="rank color-{{commonColors[$index]}}">
-                      <span>{{rank}}</span>
-                    </div>
-                    <div class="word">{{word.word}}</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="analysis-box" ng-show="analysis.sites[1][results].headlineText.words">
-                <h4>Headline Text</h4>
-                <div class="word-pane  common">
-                  <div class="word-box title">
-                    <div class="rank">Rank</div>
-                    <div class="word">Word</div>
-                  </div>
-                  <div ng-repeat="word in commonWords['headlineText'] | limitTo:100" class="word-box">
-                    <div ng-repeat="rank in word.rank" class="rank color-{{commonColors[$index]}}">
-                      <span>{{rank}}</span>
-                    </div>
-                    <div class="word">{{word.word}}</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="analysis-box" ng-show="analysis.sites[1][results].hiddenText.words">
-                <h4>Hidden Text</h4>
-                <div class="word-pane common">
-                  <div class="word-box title">
-                    <div class="rank">Rank</div>
-                    <div class="word">Word</div>
-                  </div>
-                  <div ng-repeat="word in commonWords['hiddenText'] | limitTo:100" class="word-box">
-                    <div ng-repeat="rank in word.rank" class="rank color-{{commonColors[$index]}}">
-                      <span>{{rank}}</span>
-                    </div>
-                    <div class="word">{{word.word}}</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <hr />
-          </div>
+          <div ng-include src="'views/splashdown/text.html'"></div>        
         </pane>
-        <pane heading="Links">link content</pane>
+        <pane heading="Links">
+          <div ng-include src="'views/splashdown/text.html'"></div>
+        </pane>
         <pane heading="Context">context content</pane>
         <pane heading="Synonyms">synonyms content</pane>
         <pane heading="Selectors">selector content</pane>
