--- a/spiderweb/app/views/splashdown.html
+++ b/spiderweb/app/views/splashdown.html
@@ -17,7 +17,7 @@
           <div ng-include src="'views/splashdown/text.html'"></div>        
         </pane>
         <pane heading="Links">
-          <div ng-include src="'views/splashdown/text.html'"></div>
+          <div ng-include src="'views/splashdown/links.html'"></div>
         </pane>
         <pane heading="Context">context content</pane>
         <pane heading="Synonyms">synonyms content</pane>
