--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -381,7 +381,7 @@
   .add-info-btns {
     float: right;
     margin-top: -35px;
-    margin-right: 30px;
+    margin-right: 5px;
   }
 
 }
@@ -409,8 +409,22 @@
   text-align: center;
 
   h4 {
-    text-align: left;
-    padding-left: 10px;
+    display: inline;
+  }
+
+  .item-header {
+    float: left;
+    padding-left: 15px;
+
+  }
+
+  .type-header {
+    float: right;
+    padding-right: 15px;
+  }
+
+  .nothing-selected {
+    font-weight: normal;
   }
 }
 
